--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "1.0.0",
   "description": "Bas un dj frere",
   "main": "index.js",
+  "engines": {
+    "node": "10.19.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start" : "node index.js" 
   },
   "author": "",
   "license": "ISC",
